gcc/testsuite/rust/rustc/ui/parser/recover/recover-assoc-const-constraint_dg.rs
#[cfg(FALSE)]
fn syntax() {
    bar::<Item = 42>();
// { dg-error ".E0658." "" { target *-*-* } .-1 }
    bar::<Item = { 42 }>();
// { dg-error ".E0658." "" { target *-*-* } .-1 }
}

fn main() {}

